# monitetoring

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  install_system_wide.sh  setup_windows.bat  test_api_endpoints.py  test_container.rs
.network-monitoring-dashboard/: .gitignore  README.md
.network-monitoring-dashboard/python_api/: requirements.txt
.network-monitoring-dashboard/python_api/app/: models.py
moninet-dashboard/: package-lock.json  package.json
moninet-dashboard/src/: App.tsx
moninet-dashboard/src/components/: HistoricalCharts.jsx  SecurityAlerts.jsx
moninet-dashboard/src/components/BandwidthUsage/: BandwidthUsage.tsx
moninet-dashboard/src/components/ConnectivityStatus/: ConnectivityStatus.tsx
moninet-dashboard/src/components/DeviceList/: DeviceList.tsx  DeviceListItem.tsx
moninet-dashboard/src/components/Layout/: DashboardLayout.tsx
moninet-dashboard/src/interfaces/: networkData.ts
moninet-dashboard/src/services/: websocketService.ts
network-monitoring-dashboard/python_api/: dump.rdb
network-monitoring-dashboard/python_api/app/: create_db.py
network-monitoring-dashboard/rust_engine/: Cargo.toml
plans/: PHASE_1_PLAN.md  grand_plan.md  phase3-tui-stack-migration.md
python_api/: test_security_detectors.py
python_api/app/: database.py  main.py  models.py
python_api/app/api/: intelligent_monitoring_endpoints.py  monitoring_endpoints.py  security_endpoints.py
python_api/app/monitoring/: intelligent_network_monitor.py
python_api/app/redis/: flow_processor.py
python_api/app/security/: ddos_detector.py  ml_integration_manager.py  ml_model_adapter.py  port_scan_detector.py
python_api/migrations/: 003_enhanced_monitoring.sql
rust_engine/: Cargo.toml
rust_engine/src/: main.rs
rust_engine/src/network/: flow.rs  flow_aggregator.rs  mod.rs
src/: capture.rs  config.rs  dependencies.rs  interactive.rs  main.rs  process.rs  types.rs  ui.rs  ui_old.rs
src/process/: linux.rs  mod.rs  windows.rs
src/ui/: charts.rs  input.rs  mod.rs  terminal.rs  utils.rs
src/ui/renderers/: alert.rs  bandwidth.rs  mod.rs  normal.rs  overview.rs  packet_details.rs  settings.rs
src/ui/renderers/packet_details/: cache.rs  export.rs  layout.rs  mod.rs  render.rs  utils.rs
src/ui/widgets/: mod.rs
