[package]
name = "monitetoring"
version = "0.1.6"
edition = "2024"

[dependencies]
pcap = "2.2.0"
etherparse = "0.14.0"
procfs = "0.16.0"
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
crossterm = "0.27"
ratatui = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
nix = { version = "0.28.0", features = ["signal"] }
chrono = { version = "0.4", features = ["serde"] }

# Optimization profiles
[profile.release]
# Enable Link-Time Optimization for smaller binary size and better performance
lto = true
# Use single codegen unit for better optimization (slower compile, better runtime)
codegen-units = 1

# Developer-friendly profile with optimizations but without LTO
# Usage: cargo build --profile optimized-dev
[profile.optimized-dev]
inherits = "release"
lto = false
codegen-units = 16  # Default value for faster compilation
