[package]
name = "monitetoring"
version = "0.3.2"
edition = "2024"
license = "GPL-2.0"
description = "A real-time per-process network bandwidth monitoring tool for Linux, inspired by nethogs. Built with Rust and featuring a terminal UI powered by ratatui."
homepage = "https://github.com/superapple8x/monitetoring"
repository = "https://github.com/superapple8x/monitetoring"
readme = "README.md"
keywords = ["network", "monitoring", "bandwidth", "linux", "tui"]
categories = ["command-line-utilities", "network-programming"]

# Post-install instructions for better sudo compatibility
[package.metadata.install]
post-install-message = """
📦 Monitetoring has been installed to ~/.cargo/bin/monitetoring

🔧 For easier sudo usage, consider one of these options:

1. Create a system-wide installation (recommended):
   sudo ln -sf ~/.cargo/bin/monitetoring /usr/local/bin/monitetoring

2. Use this command with sudo:
   sudo ~/.cargo/bin/monitetoring --iface any

3. Keep your PATH when using sudo:
   sudo -E monitetoring --iface any

After option 1, you can simply run: sudo monitetoring --iface any
"""

[dependencies]
pcap = "2.4.0"
etherparse = "0.20.0"
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
crossterm = "0.29"
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.12"

# Linux-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.18.0"
nix = { version = "0.31", features = ["signal"] }
libc = "0.2"

# Windows-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
netstat2 = "0.11"
sysinfo = "0.39"

# Optimization profiles
[profile.release]
# Enable Link-Time Optimization for smaller binary size and better performance
lto = true
# Use single codegen unit for better optimization (slower compile, better runtime)
codegen-units = 1

# Developer-friendly profile with optimizations but without LTO
# Usage: cargo build --profile optimized-dev
[profile.optimized-dev]
inherits = "release"
lto = false
codegen-units = 16  # Default value for faster compilation
